--- a/src/ssu_theme/ssu_theme/static/css/main.css
+++ b/src/ssu_theme/ssu_theme/static/css/main.css
@@ -78,6 +78,112 @@
   }
 }
 
+/* This whole section is copied from voteit.core, where it's deprecated. */
+.navbar-voteit {
+  background-color: #f61d1e;
+  border-color: #d7090a;
+  border-bottom: 0;
+  height: 50px;
+  /* Float all for the standard nav in VoteIT */
+  /* FIXME: Attach right nav as fixed instead.
+  Make sure it has a background and goes on top of the title of the meeting!
+  */
+}
+.navbar-voteit .navbar-nav, .navbar-voteit .navbar-brand, .navbar-voteit .navbar-header, .navbar-voteit .navbar-nav > li {
+  float: left;
+}
+.navbar-voteit .navbar-right {
+  float: right;
+}
+.navbar-voteit .navbar-brand {
+  color: #fff;
+}
+.navbar-voteit .navbar-brand:hover, .navbar-voteit .navbar-brand:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-voteit .navbar-text {
+  color: #fff;
+}
+.navbar-voteit .navbar-nav {
+  margin: 0 -15px;
+}
+.navbar-voteit .navbar-nav > li > a {
+  color: #fff;
+  /*
+  padding-top:    15px;
+  padding-bottom: 15px;
+  */
+}
+.navbar-voteit .navbar-nav > li > a:hover, .navbar-voteit .navbar-nav > li > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-voteit .navbar-nav > .active > a, .navbar-voteit .navbar-nav > .active > a:hover, .navbar-voteit .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: #f73636;
+}
+.navbar-voteit .navbar-nav > .disabled > a, .navbar-voteit .navbar-nav > .disabled > a:hover, .navbar-voteit .navbar-nav > .disabled > a:focus {
+  color: #eee;
+  background-color: transparent;
+}
+.navbar-voteit .navbar-toggle {
+  border-color: #f73636;
+}
+.navbar-voteit .navbar-toggle:hover, .navbar-voteit .navbar-toggle:focus {
+  background-color: #f73636;
+}
+.navbar-voteit .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+.navbar-voteit .navbar-collapse,
+.navbar-voteit .navbar-form {
+  border-color: #e6090a;
+}
+.navbar-voteit .navbar-nav > .open > a, .navbar-voteit .navbar-nav > .open > a:hover, .navbar-voteit .navbar-nav > .open > a:focus {
+  background-color: #f73636;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .navbar-voteit .navbar-nav .open .dropdown-menu > .dropdown-header {
+    border-color: #d7090a;
+  }
+  .navbar-voteit .navbar-nav .open .dropdown-menu .divider {
+    background-color: #d7090a;
+  }
+  .navbar-voteit .navbar-nav .open .dropdown-menu > li > a {
+    color: #fff;
+  }
+  .navbar-voteit .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-voteit .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #fff;
+    background-color: transparent;
+  }
+  .navbar-voteit .navbar-nav .open .dropdown-menu > .active > a, .navbar-voteit .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-voteit .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #fff;
+    background-color: #f73636;
+  }
+  .navbar-voteit .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-voteit .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-voteit .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+    color: #eee;
+    background-color: transparent;
+  }
+}
+.navbar-voteit .navbar-link {
+  color: #fff;
+}
+.navbar-voteit .navbar-link:hover {
+  color: #fff;
+}
+.navbar-voteit .btn-link {
+  color: #fff;
+}
+.navbar-voteit .btn-link:hover, .navbar-voteit .btn-link:focus {
+  color: #fff;
+}
+.navbar-voteit .btn-link[disabled]:hover, .navbar-voteit .btn-link[disabled]:focus, fieldset[disabled] .navbar-voteit .btn-link:hover, fieldset[disabled] .navbar-voteit .btn-link:focus {
+  color: #eee;
+}
+
+/* END Deprecated nav */
 /* BRANDON */
 @font-face {
   font-family: "BrandonText-Regular";
